# simple-cmake

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleanup.sh  config-build.sh  destroy-rebuild-standalone.sh  destroy-rebuild-wasm.sh  wasm-build.sh
lib/: CMakeLists.txt  lib.cpp  lib.h
src/: CMakeLists.txt  main.cpp  main_wasm.cpp
wasm_playground/: index.template.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
wasm_playground/src/: WasmBridge.ts  index.js
